# nexaf-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
database/: README.md  VARIABLES.md
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_phenotyping.ipynb  04_associations.ipynb
src/: __init__.py  config.py
src/analysis/: __init__.py  clinical_utils.py  phenotype_analysis.py  report_generator.py
src/association/: __init__.py  feature_importance.py  outcome_prediction.py  survival_analysis.py
src/clustering/: __init__.py  cluster_validation.py  static_clustering.py  trajectory_clustering.py
src/features/: __init__.py  burden_features.py  episode_features.py  feature_aggregator.py  rr_features.py  temporal_features.py  trajectory_features.py
src/preprocessing/: __init__.py  data_integrator.py  data_loader.py  episode_cleaner.py  time_aligner.py
src/trajectory/: __init__.py  state_modeling.py  time_series.py
src/visualization/: __init__.py
