[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexaf-ai"
version = "0.1.0"
description = "AF trajectory analysis and phenotyping for the NEXAF study"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Erlend Flo Lenz, Jon Magne Letnes, Jan Pål Loennechen, Andreas Østvik"}
]
keywords = ["atrial fibrillation", "phenotyping", "trajectory analysis", "clustering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyreadstat>=1.2.0",
    "scikit-learn>=1.3.0",
    "hdbscan>=0.8.0",
    "umap-learn>=0.5.0",
    "tslearn>=0.6.0",
    "dtaidistance>=2.3.0",
    "lifelines>=0.27.0",
    "shap>=0.42.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
]
all = [
    "nexaf-ai[dev,notebooks]",
]

[project.urls]
Repository = "https://github.com/NTNU/nexaf-ai"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"